# Rus_os

./: Cargo.toml  Makefile  README.md
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_start.asm  multiboot_header.asm
src/memory/: area_frame_allocator.rs  mod.rs
