[package]
name = "rust_os"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "Lucas van Oosterhout <lucasvanoosterhout@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
spin = "0.3.4"

#The development profile, used for cargo build
[profile.dev]
panic = "abort"

#profile used for release:
[profile.release]
panic = "abort"